--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
 fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==2.6.0
-slowapi==0.1.9
-tenacity==8.2.3
+uvicorn[standard]==0.27.0
 streamlit==1.31.0
-openai==1.12.0
-litellm>=1.81.0
-presidio-analyzer==2.2.353
-presidio-anonymizer==2.2.353
-sentence-transformers==2.5.0
-scikit-learn==1.4.0
+pydantic==2.6.0
 python-dotenv==1.0.1
+requests==2.31.0
+litellm>=1.81.0
+openai>=1.12.0
